--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Visitor Counter</title>
+    <title>it just counter</title>
   </head>
   <body>
-    <h1>Visitor Counter</h1>
+    <h1>It Just Counter</h1>
+
+    <h1>사용법</h1>
+
+    <div>https://visitor-counter.qhdgkdbs.workers.dev/visit?url=$URL</div>
+    <div>$URL에 방문자 수를 카운팅하고 싶은 url 주소를 넣으면 됩니다</div>
+    <div>
+      예시) https://visitor-counter.qhdgkdbs.workers.dev/visit?url=itjustbong.me
+    </div>
   </body>
 </html>
