📝 / index counter 추가

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>it just counter</title>
+    <script>
+      fetch(
+        'https://visitor-counter.qhdgkdbs.workers.dev/visit?url=visitor-counter.qhdgkdbs.workers.dev'
+      );
+    </script>
   </head>
   <body>
     <h1>It Just Counter</h1>
