--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,29 @@
   <body>
     <h1>It Just Counter</h1>
 
-    <h1>사용법</h1>
+    <h1>HOW?</h1>
+    <h3>JSON</h3>
+    <div>${BASEURL}/visit?url=$URL</div>
+    <div>${URL} is the url you want to count visitors</div>
+    <div>예시) ${BASEURL}/visit?url=itjustbong.me</div>
 
-    <div>https://visitor-counter.qhdgkdbs.workers.dev/visit?url=$URL</div>
-    <div>$URL에 방문자 수를 카운팅하고 싶은 url 주소를 넣으면 됩니다</div>
+    <h3>SVG with OPTIONS</h3>
+
     <div>
-      예시) https://visitor-counter.qhdgkdbs.workers.dev/visit?url=itjustbong.me
+      EX with text,
+      bgcolor)${BASEURL}/visit?url=itjustbong.me&type=svg&text=itjustbong-counter&bgcolor=rgb(10,100,10)
+      <div />
+      <img
+        src="https://visitor-counter.qhdgkdbs.workers.dev/visit?url=itjustbong.me&type=svg&text=itjustbong-counter&bgcolor=rgb(10,100,10)"
+      />
+    </div>
+    <div>
+      EX with
+      text)${BASEURL}/visit?url=itjustbong.me&type=svg&text=itjustbong-counter
+    </div>
+    <div>
+      EX with
+      bgcolor)${BASEURL}/visit?url=itjustbong.me&type=svg&bgcolor=rgb(100,100,97)
     </div>
   </body>
 </html>
